Fix footnote spacing

--- a/src/Vivelin.Web.Home/wwwroot/css/site.css
+++ b/src/Vivelin.Web.Home/wwwroot/css/site.css
@@ -170,6 +170,7 @@ ol.footnotes {
 
   ol.footnotes li {
     list-style: none;
+    margin-bottom: 0;
   }
 
     ol.footnotes li:target {
